--- a/css/index.css
+++ b/css/index.css
@@ -166,13 +166,14 @@ body {
       font-family: BariolThin;
       font-size: 9pt;
       text-decoration: none;
-      color: #9b9b9b;
+      color: white;
       position: absolute;
       right: 0;
       padding: 3px;
-      bottom: -5; }
+      bottom: -1;
+      background: #9b9b9b; }
       #menu-bar #menu-scores .scores-more:hover {
-        color: #fa4b2a;
+        background: #fa4b2a;
         cursor: pointer; }
     #menu-bar #menu-scores .score-container {
       -webkit-transition: top 0.25s ease;
@@ -402,7 +403,7 @@ body {
       top: 75px; }
   body #hero-nav {
     width: 100%;
-    height: 500px;
+    height: 80%;
     background: #000;
     position: fixed;
     z-index: 1;
@@ -414,7 +415,8 @@ body {
       -o-transition: all 0.25s ease;
       transition: all 0.25s ease;
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      font-family: BariolThin; }
       body #hero-nav #hero-container .story:hover {
         cursor: pointer;
         width: 125%; }
@@ -494,7 +496,7 @@ body {
           cursor: pointer; }
   body #story-stream {
     position: absolute;
-    top: 450px;
+    top: 80%;
     width: 100%;
     z-index: 2; }
     body #story-stream #search {
@@ -632,6 +634,11 @@ body {
           background: url("../img/blocks/ad.jpg") center;
           background-size: cover;
           background-repeat: no-repeat; }
+        body #story-stream #stories #story-grid .ad {
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          border: 3px solid white; }
         body #story-stream #stories #story-grid .story-block {
           -webkit-transition: all 0.25s ease;
           -moz-transition: all 0.25s ease;
