--- a/css/index.scss
+++ b/css/index.scss
@@ -37,7 +37,7 @@ body {
 
 	#hero-nav {
 		width: 100%;
-		height: 500px;
+		height: 80%;
 		background: #000;
 		position: fixed;
 		z-index: 1;
@@ -49,6 +49,7 @@ body {
 				@include transition(all .25s ease);
 				width: 100%;
 				height: 100%;
+				font-family: BariolThin;
 				
 				&:hover {
 					cursor: pointer;
@@ -154,7 +155,7 @@ body {
 
 	#story-stream {
 		position: absolute;
-		top: 450px;
+		top: 80%;
 		width: 100%;
 		z-index: 2;
 
@@ -332,6 +333,11 @@ body {
 					background: url('../img/blocks/ad.jpg') center;
 					background-size: cover;
 					background-repeat: no-repeat;
+				}
+
+				.ad {
+					@include box-sizing(border-box);
+					border: 3px solid white;
 				}
 
 				.story-block {
