--- a/css/index.scss
+++ b/css/index.scss
@@ -250,6 +250,15 @@ body {
 				margin-left: auto;
 				margin-right: auto;
 				display: block;
+				width: 606px;
+
+				@media only screen and (min-width : 909px) {
+		            width: 909px;
+		        }
+
+		        @media only screen and (min-width : 1217px) {
+		            width: 1217px;
+		        }
 
 				#block-story-1 {
 					background: url('../img/blocks/1.jpg') center;
