--- a/css/sports.scss
+++ b/css/sports.scss
@@ -180,7 +180,6 @@ body {
 
 		.block {
 			@include box-sizing(border-box);
-			@include box-shadow(0px 1px 4px rgba(0,0,0,.4));
 			background: #000;
 			width: 250px;
 			height: 250px;
@@ -268,35 +267,49 @@ body {
 			}
 
 			#block-5 {
-				background: url('../img/blocks/5.jpg') center;
+				background: url('../img/football/5.jpg') center;
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
 
 			#block-6 {
-				background: url('../img/blocks/6.jpg') center;
+				background: url('../img/football/6.jpg') center;
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
 
 			#block-7 {
-				background: url('../img/blocks/7.jpg') center;
+				background: url('../img/football/7.jpg') center;
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
 
 			#block-8 {
-				background: url('../img/blocks/8.jpg') center;
+				background: url('../img/football/8.jpg') center;
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
 
 			#block-9 {
-				background: url('../img/blocks/9.jpg') center;
+				background: url('../img/football/9.jpg') center;
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
 
+			#block-10 {
+				background: url('../img/football/10.jpg') center;
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+
+		}
+
+		#block-last {
+			display: none;
+
+			@media only screen and (min-width : 1420px) {
+	            display: block;
+	        }
 		}
 
 		.portrait {
@@ -327,42 +340,4 @@ body {
 
 	}
 
-}
-
-.grid {
-	max-width: 69em;
-	list-style: none;
-	margin: 30px auto;
-	padding: 0;
-}
-
-.grid.effect-4 {
-	-webkit-perspective: 1300px;
-	-moz-perspective: 1300px;
-	perspective: 1300px;
-}
-
-.grid.effect-4 li.animate {
-	opacity: 0;
-	-webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transform: translateZ(400px) translateY(300px) rotateX(-90deg);
-	-moz-transform: translateZ(400px) translateY(300px) rotateX(-90deg);
-	transform: translateZ(400px) translateY(300px) rotateX(-90deg);
-	-webkit-animation: fallPerspective .8s ease-in-out forwards;
-	-moz-animation: fallPerspective .8s ease-in-out forwards;
-	animation: fallPerspective .8s ease-in-out forwards;
-}
-
-@-webkit-keyframes fallPerspective {
-	100% { -webkit-transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
-}
-
-@-moz-keyframes fallPerspective {
-	100% { -moz-transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
-}
-
-@keyframes fallPerspective {
-	100% { transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
 }
