--- a/css/sports.scss
+++ b/css/sports.scss
@@ -224,7 +224,7 @@ body {
 				@include transition(all .25s);
 				z-index: 10;
 				color: white;
-				width: 100%;
+				width: 90%;
 				position: absolute;
 				top: 40%;
 				text-align: center;
@@ -232,6 +232,9 @@ body {
 				@include transform(scale(1.3));
 				opacity: 0;
 				font-family: BariolThin;
+				margin-left: auto;
+				margin-right: auto;
+				padding-left: 10px;
 			}
 
 			.block-pic {
@@ -333,7 +336,8 @@ body {
 			}
 
 			.caption {
-				top: 40%;
+				top: 35%;
+				padding-left: 20px;
 			}
 
 		}
