--- a/css/sports.css
+++ b/css/sports.css
@@ -355,6 +355,42 @@ body {
 .text-blue {
   color: #47bee2; }
 
+.text-orange {
+  color: #fa4b2a; }
+
+.bg-orange {
+  background: #fa4b2a; }
+
+.bg-lightorange {
+  background: #fb755c; }
+
+.bg-green {
+  background: #74bb75; }
+
+.bg-blue {
+  background: #6378E4; }
+
+.bg-darkblue {
+  background: #31b6df; }
+
+.bg-white {
+  background: white; }
+
+.bg-lightgray {
+  background: #9b9b9b; }
+
+.bg-darkgray {
+  background: #6d6e71; }
+
+.bg-purple {
+  background: #7880b9; }
+
+.bg-yellow {
+  background: #f1c817; }
+
+.bg-crimson {
+  background: #ca3756; }
+
 #soccer {
   background: url("../img/icons/black/soccer.png") center;
   background-size: cover; }
@@ -534,7 +570,7 @@ body {
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
         opacity: 1;
-        top: 34%; }
+        top: 25%; }
       #stream #stream-content .block .caption-decoration {
         -webkit-transition: all 0.25s ease;
         -moz-transition: all 0.25s ease;
@@ -564,7 +600,7 @@ body {
         color: white;
         width: 90%;
         position: absolute;
-        top: 40%;
+        top: 30%;
         text-align: center;
         font-size: 20pt;
         -webkit-transform: scale(1.3);
@@ -587,6 +623,30 @@ body {
         height: 100%;
         background-size: cover;
         background-repeat: no-repeat; }
+      #stream #stream-content .block .tag-container {
+        position: absolute;
+        bottom: 0;
+        font-family: BariolThin;
+        padding-top: 10px;
+        margin-left: auto;
+        margin-right: auto; }
+        #stream #stream-content .block .tag-container .first {
+          margin-left: 10px; }
+        #stream #stream-content .block .tag-container .tag {
+          -webkit-transition: opacity 0.25s ease;
+          -moz-transition: opacity 0.25s ease;
+          -ms-transition: opacity 0.25s ease;
+          -o-transition: opacity 0.25s ease;
+          transition: opacity 0.25s ease;
+          display: inline-block;
+          color: white;
+          padding: 0 5 0 5;
+          margin-bottom: 5px; }
+          #stream #stream-content .block .tag-container .tag:hover {
+            opacity: .8; }
+        #stream #stream-content .block .tag-container .tag-comma {
+          display: inline-block;
+          color: #9b9b9b; }
       #stream #stream-content .block #block-1 {
         background: url("../img/football/1.jpg") center;
         background-size: cover;
