--- a/css/sports.scss
+++ b/css/sports.scss
@@ -204,7 +204,7 @@ body {
 			&:hover > .caption-decoration {
 				@include transform(rotate(0deg));
 				opacity: 1;
-				top: 34%;
+				top: 25%;
 			}
 
 			.caption-decoration {
@@ -226,7 +226,7 @@ body {
 				color: white;
 				width: 90%;
 				position: absolute;
-				top: 40%;
+				top: 30%;
 				text-align: center;
 				font-size: 20pt;
 				@include transform(scale(1.3));
@@ -243,6 +243,36 @@ body {
 				height: 100%;
 				background-size: cover;
 				background-repeat: no-repeat;
+			}
+
+
+			.tag-container {
+				position: absolute;
+				bottom: 0;
+				font-family: BariolThin;
+				padding-top: 10px;
+				margin-left: auto;
+				margin-right: auto;
+
+				.first {
+					margin-left: 10px;
+				}
+				
+				.tag {
+					@include transition(opacity .25s ease);
+					display: inline-block;
+					color: white;
+					padding: 0 5 0 5;
+					margin-bottom: 5px;
+
+					&:hover {
+						opacity: .8;
+					}
+				}
+				.tag-comma {
+					display: inline-block;
+					color: $lightgray;
+				}
 			}
 
 			#block-1 {
