--- a/css/sports.scss
+++ b/css/sports.scss
@@ -253,6 +253,8 @@ body {
 				padding-top: 10px;
 				margin-left: auto;
 				margin-right: auto;
+				width: 100%;
+				z-index: 100;
 
 				.first {
 					margin-left: 10px;
