--- a/css/sports.scss
+++ b/css/sports.scss
@@ -459,6 +459,24 @@ body {
 			padding-right: 20;
 		}
 
+		#dropdown-basketball {
+			.dropdown-sport-logo {
+				margin-left: 10px !important;
+			}
+		}
+
+		#dropdown-hockey {
+			.dropdown-sport-logo {
+				margin-left: 10px !important;
+			}
+		}
+
+		#dropdown-golf {
+			.dropdown-sport-logo {
+				margin-left: 10px !important;
+			}
+		}
+
 		.small {
 			width: 36px;
 			opacity: .5;
