--- a/css/global.scss
+++ b/css/global.scss
@@ -200,7 +200,7 @@ body {
     @include transition(all .25s ease);
     border-top: 3px solid $orange;
     width: 100%;
-    height: 75px;
+    height: 145px;
     background: rgba(255, 255, 255, 0.97);
     position: fixed;
     top: 0;
@@ -426,8 +426,42 @@ body {
         #dropdown-swimming {
             padding-right: 55px;
         }
+        
         #dropdown-football {
             padding-left: 55px;
+        }
+
+        #dropdown-basketball {
+           
+            .dropdown-sport-logo {
+                margin-left: 0px;
+            }
+
+            .dropdown-sport-title {
+                margin-left: 25px;
+            }
+        }
+
+        #dropdown-hockey {
+           
+            .dropdown-sport-logo {
+                margin-left: 18px;
+            }
+
+            .dropdown-sport-title {
+                margin-left: 45px;
+            }
+        }
+
+        #dropdown-golf {
+           
+            .dropdown-sport-logo {
+                margin-left: 30px;
+            }
+
+            .dropdown-sport-title {
+                margin-left: 65px;
+            }
         }
 
         li {
