--- a/css/scores.css
+++ b/css/scores.css
@@ -460,6 +460,14 @@ body {
         cursor: pointer;
         top: -24px; }
 
+::selection {
+  background: #fa4b2a;
+  color: white; }
+
+::-moz-selection {
+  background: #fa4b2a;
+  color: white; }
+
 .scores-content {
   margin-top: 80px;
   width: 90%;
