--- a/css/global.scss
+++ b/css/global.scss
@@ -685,3 +685,13 @@ body {
     }
 
 }
+
+//selection color
+::selection {
+    background: $orange;
+    color: white;
+}
+::-moz-selection {
+    background: $orange;
+    color: white;
+}
