--- a/css/index.css
+++ b/css/index.css
@@ -460,6 +460,14 @@ body {
         cursor: pointer;
         top: -24px; }
 
+::selection {
+  background: #fa4b2a;
+  color: white; }
+
+::-moz-selection {
+  background: #fa4b2a;
+  color: white; }
+
 body {
   background: #ffffff;
   overflow-x: hidden;
@@ -591,78 +599,42 @@ body {
     width: 100%;
     z-index: 2;
     padding-bottom: 50px; }
-    body #story-stream #search {
-      display: none;
+    body #story-stream #stories-header {
       width: 100%;
       height: 50px;
       background: white;
-      z-index: 1100; }
-      body #story-stream #search.stuck {
+      z-index: 1100;
+      overflow: hidden; }
+      body #story-stream #stories-header.stuck {
         position: fixed;
-        top: 75; }
-      body #story-stream #search #search-categories {
-        width: 464px;
-        margin: 0 auto 0 auto; }
-        body #story-stream #search #search-categories .category-icon {
-          -webkit-transition: all 0.25s ease;
-          -moz-transition: all 0.25s ease;
-          -ms-transition: all 0.25s ease;
-          -o-transition: all 0.25s ease;
-          transition: all 0.25s ease;
-          display: inline-block;
-          width: 20px;
-          height: 20px;
-          margin-top: 18px;
-          margin-right: 50px;
-          opacity: .7;
-          -webkit-transform: rotateZ(0deg) scale(1);
-          -moz-transform: rotateZ(0deg) scale(1);
-          -ms-transform: rotateZ(0deg) scale(1);
-          -o-transform: rotateZ(0deg) scale(1);
-          transform: rotateZ(0deg) scale(1); }
-          body #story-stream #search #search-categories .category-icon:hover {
-            opacity: 1;
-            cursor: pointer;
-            -webkit-transform: rotateZ(90deg) scale(1.2);
-            -moz-transform: rotateZ(90deg) scale(1.2);
-            -ms-transform: rotateZ(90deg) scale(1.2);
-            -o-transform: rotateZ(90deg) scale(1.2);
-            transform: rotateZ(90deg) scale(1.2); }
-          body #story-stream #search #search-categories .category-icon.category-selected {
-            opacity: 1;
-            -webkit-transform: rotateZ(90deg) scale(1.2);
-            -moz-transform: rotateZ(90deg) scale(1.2);
-            -ms-transform: rotateZ(90deg) scale(1.2);
-            -o-transform: rotateZ(90deg) scale(1.2);
-            transform: rotateZ(90deg) scale(1.2); }
-        body #story-stream #search #search-categories #soccer {
-          background: url("../img/search/soccer.png") center;
-          background-size: cover; }
-        body #story-stream #search #search-categories #basketball {
-          background: url("../img/search/basketball.png") center;
-          background-size: cover; }
-        body #story-stream #search #search-categories #football {
-          background: url("../img/search/football.png") center;
-          background-size: cover; }
-        body #story-stream #search #search-categories #baseball {
-          background: url("../img/search/baseball.png") center;
-          background-size: cover; }
-        body #story-stream #search #search-categories #hockey {
-          background: url("../img/search/hockey.png") center;
-          background-size: cover; }
-        body #story-stream #search #search-categories #golf {
-          background: url("../img/search/golf.png") center;
-          background-size: cover; }
-          body #story-stream #search #search-categories #golf:hover {
-            -webkit-transform: rotateZ(0deg) scale(1.2);
-            -moz-transform: rotateZ(0deg) scale(1.2);
-            -ms-transform: rotateZ(0deg) scale(1.2);
-            -o-transform: rotateZ(0deg) scale(1.2);
-            transform: rotateZ(0deg) scale(1.2); }
-        body #story-stream #search #search-categories #swimming {
-          background: url("../img/search/swimming.png") center;
-          background-size: cover;
-          margin-right: 0; }
+        top: 149px; }
+      body #story-stream #stories-header a {
+        text-decoration: none;
+        height: 100%; }
+      body #story-stream #stories-header h1 {
+        display: inline-block;
+        background: white;
+        font-family: BariolThin;
+        line-height: 40pt;
+        font-size: 30pt;
+        color: white;
+        width: 300px;
+        text-align: left;
+        position: relative;
+        height: 100%;
+        background: #fa4b2a;
+        margin: 0 0 0 0;
+        padding-left: 30px; }
+        body #story-stream #stories-header h1:hover {
+          background: #eb2a06; }
+      body #story-stream #stories-header .big-headline {
+        color: #383a3b;
+        font-family: BariolThin;
+        font-weight: normal;
+        font-size: 22pt;
+        margin-left: 5%; }
+        body #story-stream #stories-header .big-headline:hover {
+          color: #fa4b2a; }
     body #story-stream #stories {
       width: 100%;
       background: #000;
