--- a/css/player.css
+++ b/css/player.css
@@ -460,6 +460,14 @@ body {
         cursor: pointer;
         top: -24px; }
 
+::selection {
+  background: #fa4b2a;
+  color: white; }
+
+::-moz-selection {
+  background: #fa4b2a;
+  color: white; }
+
 .cover {
   width: 100%;
   height: 100%; }
