--- a/css/sports.css
+++ b/css/sports.css
@@ -460,6 +460,14 @@ body {
         cursor: pointer;
         top: -24px; }
 
+::selection {
+  background: #fa4b2a;
+  color: white; }
+
+::-moz-selection {
+  background: #fa4b2a;
+  color: white; }
+
 body {
   background: #ffffff;
   min-width: 1030px; }
