--- a/css/index.css
+++ b/css/index.css
@@ -30,8 +30,7 @@ body {
   font-family: 'Bariol';
   font-weight: normal;
   margin: 0;
-  min-width: 730px;
-  position: relative; }
+  min-width: 730px; }
 
 .visible {
   display: block; }
@@ -604,7 +603,9 @@ body {
       height: 50px;
       background: white;
       z-index: 1100;
-      overflow: hidden; }
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; }
       body #story-stream #stories-header.stuck {
         position: fixed;
         top: 149px; }
@@ -632,7 +633,8 @@ body {
         font-family: BariolThin;
         font-weight: normal;
         font-size: 22pt;
-        margin-left: 5%; }
+        margin-left: 5%;
+        margin-right: 5%; }
         body #story-stream #stories-header .big-headline:hover {
           color: #fa4b2a; }
     body #story-stream #stories {
