--- a/css/index.scss
+++ b/css/index.scss
@@ -166,6 +166,8 @@ body {
 			background: rgba(255, 255, 255, 1);
 			z-index: 1100;
 			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 
 			&.stuck {
 				position: fixed;
@@ -203,6 +205,7 @@ body {
 				font-weight: normal;
 				font-size: 22pt;
 				margin-left: 5%;
+				margin-right: 5%;
 
 				&:hover {
 					color: $orange;
