--- a/css/player.scss
+++ b/css/player.scss
@@ -9,6 +9,7 @@
 		height: 100%;
 		background-size: cover;
 		position: fixed;
+		top: 75;
 		z-index: 1;
 	}
 
@@ -106,14 +107,36 @@
 			text-align: center;
 		}
 
+		.separator {
+			height: 1px;
+			width: 150px;
+			margin-left: auto;
+			margin-right: auto;
+			background: $lightgray;
+			margin-top: 50px;
+		}
+
+		.header {
+			margin-top: 30px;
+			font-size: 20pt;
+			color: lighten($lightgray, 20%);
+			width: 100px;
+			text-align: left;
+		}
+
+		.recent-header {
+			width: 200px;
+			margin-top: 50px;
+		}
+
 		.stats-container {
 			@include transition(height .6s ease);
-			margin-top: 30px;
-			overflow: hidden;
+			margin-top: 10px;
+			overflow-y: scroll;
 			height: 13%;
 
 			&:hover {
-				height: 100%;
+				height: 50%;
 			}
 
 			table {
@@ -160,11 +183,26 @@
 			}
 		}
 		.articles {
-			margin-top: 50px;
+			margin-top: 20px;
 			width: 100%;
 			height: 120px;
 			overflow-x: scroll;
 			white-space: nowrap;
+			position: relative;
+
+			.articles-right-arrow {
+				display: none;
+				position: absolute;
+				height: 98px;
+				width: 40px;
+				line-height: 70pt;
+				background: white;
+				font-size: 30pt;
+				color: $lightgray;
+				right: 0;
+				text-align: center;
+				border: 1px solid lighten($lightgray, 30%);
+			}
 
 			.article:first-child {
 				padding-left: 0px !important;
